--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@ textarea {
 /* || VARIABLES */
 
 :root {
-
   /* FONTS */
   --FF: "Nunito", sans-serif;
   --FF-HEADINGS: "Fugaz One", cursive;
@@ -33,32 +32,168 @@ textarea {
   /* clamp() is a part of modern css, it helps us to use lesser media queries */
   --FS: clamp(1rem, 2.2vh, 1.5rem);
 
-
   /* COLORS */
   --BGCOLOR: orange;
   --BGCOLOR-FADE: rgb(252, 220, 160);
-  --BGIMAGE: linear-gradient(
-    to bottom,
-    var(var(var(--BGCOLOR)), var(var(--BGCOLOR-FADE)))
-  );
+  --BGIMAGE: linear-gradient(to bottom, var(--BGCOLOR), var(--BGCOLOR-FADE));
   --BODY-BGCOLOR: #fff;
   --FONT-COLOR: #000;
+  --BORDER-COLOR: #333;
+  --HIGHLIGHT-COLOR: rgb(51, 178, 51);
+  --LINK-COLOR: #000;
+  --LINK-HOVER: hsla(0, 0%, 0%, 0.6);
+  --LINK-ACTIVE: orange;
+  --HEADER-BGCOLOR: #000;
+  --HEADER-COLOR: #fff;
+  --NAV-BGCOLOR: #fff;
+  --HERO-BGCOLOR: rgba(51, 178, 51, 0.75);
+  --HERO-COLOR: #fff;
 
+  /* BORDERS */
+  --BORDERS: 1px solid var(--BORDER-COLOR);
 
+  /* STANDARD PADDING */
+  --PADDING-TB: 0.2em;
+  --PADDING-SIDE: 2.5%;
+
+  /* STANDARD MARGIN */
+  --MARGIN: clamp(1em, 2.5vh, 1.5em) 0;
 }
 
 /* || UTILITY CLASSES */
 .offscreen {
-  position: absolute;  
+  position: absolute;
   left: -10000px;
-
 }
 
 .nowrap {
-    white-space: nowrap;
+  white-space: nowrap;
 }
 
 .center {
-    text-align: center;
+  text-align: center;
 }
+
+/* || GENERAL STYLES */
+
+html {
+  scroll-behavior: smooth;
+  font-size: var(--FS);
+  font-family: var(--FF);
+  background-color: var(--BGCOLOR);
+  /* background is a shorthand for
+   * background-color  
+   * background-image  
+   * background-position  
+   * background-repeat  
+   * background-attachment  
+   * background-clip  
+   * background-origin  
+   * background-size
+   */
+
+  background: var(--BGCOLOR) var(--BGIMAGE);
+  /* background: {background-color} {background-image}
+  
+  background-image gets the precedence over color
+  */
+}
+
+body {
+  background-color: var(--BODY-BGCOLOR);
+  color: var(--FONT-COLOR);
+  min-height: 100vh;
+  max-width: 800px;
+  margin: 0 auto;
+  border-left: var(--BORDERS);
+  border-left: var(--BORDERS);
+  box-shadow: 0 0 10px var(--BORDER-COLOR);
+}
+
+h1,
+h2,
+h3 {
+  font-family: var(--FF-HEADINGS);
+  letter-spacing: 0.08em;
+  font-weight: 100;
+}
+
+h2,
+h3 {
+  margin-bottom: 1em;
+  color: var(--HIGHLIGHT-COLOR);
+}
+
+p {
+  line-height: 1.5;
+}
+
+a:any-link {
+  color: var(--LINK-COLOR);
+}
+
+a:hover, 
+a:focus-visible 
+/* difference between focus & focus-visible: 
+*  focus might remain on the selected element 
+*  however, focus-visible changes after use
+*/ {
+  color: var(--LINK-HOVER);
+}
+
+a:active {
+  color: var(--LINK-ACTIVE);
+}
+
+/* || HEADER */
+.header {
+  position: sticky;
+  top: 0;
+  z-index: 1;
+}
+
+.header__h1 {
+  text-align: center;
+  background-color: var(--HEADER-BGCOLOR);
+  color: var(--HEADER-COLOR);
+  padding: var(--PADDING-TB) var(--PADDING-SIDE);
+}
+
+.header__nav {
+  background-color: var(--NAV-BGCOLOR);
+  border-bottom: var(--BORDERS);
+  font-weight: bold;
+  box-shadow: 0 6px 5px -5px var(--BORDER-COLOR);
+}
+
+.header__ul {
+  padding: var(--PADDING-TB) var(--PADDING-SIDE);
+  list-style-type: none;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 1rem;
+}
+
+/* || HERO */
+.hero {
+  position: relative;
+}
+
+.hero__h2 {
+  background-color: var(--HERO-BGCOLOR);
+  color: var(--HERO-COLOR);
+  padding: 0.25em 0.5em;
+  letter-spacing: 0.1rem;
+  text-shadow: 2px 2px 5px var(--BORDER-COLOR);
+  position: absolute;
+  top: -150px;
+  left: 20px;
+  
+
+
+}
+
+
+
+
 
